<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_purple"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/enterWordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_word"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:fontFamily="casual"
            app:layout_constraintBottom_toTopOf="@+id/wordEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

    <EditText
            android:id="@+id/wordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/enterAlgorithmTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterWordTextView" />

    <TextView
            android:id="@+id/enterAlgorithmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_algorithm"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:fontFamily="casual"
            app:layout_constraintBottom_toTopOf="@+id/algorithms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wordEditText" />

    <RadioGroup
            android:id="@+id/algorithms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/enterKeyTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterAlgorithmTextView">

        <RadioButton
                android:id="@+id/railwayFenceRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/railway_fence"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:onClick="onRadioButtonClicked"/>

        <RadioButton
                android:id="@+id/columnMethodRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/column_method"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:onClick="onRadioButtonClicked"/>

        <RadioButton
                android:id="@+id/vigenereDirectRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/vigenere_direct"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:onClick="onRadioButtonClicked"/>

        <RadioButton
                android:id="@+id/vigenereProgressiveRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/vigenere_progressive"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:onClick="onRadioButtonClicked"/>

        <RadioButton
                android:id="@+id/vigenereSelfGeneratedRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/vigenere_self_generated"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:onClick="onRadioButtonClicked"/>

        <RadioButton
                android:id="@+id/playfairRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/playfair"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
            android:id="@+id/enterKeyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_key"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:fontFamily="casual"
            app:layout_constraintBottom_toTopOf="@+id/keyEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/algorithms" />

    <EditText
            android:id="@+id/keyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/encryptButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterKeyTextView" />

    <Button
            android:id="@+id/encryptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:text="@string/encrypt"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/resultTextView"
            app:layout_constraintEnd_toStartOf="@+id/decryptButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keyEditText" />

    <Button
            android:id="@+id/decryptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_pink"
            android:text="@string/decrypt"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/encryptButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/encryptButton"
            app:layout_constraintTop_toTopOf="@+id/encryptButton" />

    <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/encryptButton" />

</android.support.constraint.ConstraintLayout>